# kenzy_image

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  build.sh  build_pypi.sh  cleanup.sh  mkdocs.yml  requirements.txt  setup.cfg  setup.py
docs/: detector.md  index.md  references.md
src/image_analyzer/: __init__.py  __main__.py  core.py
src/kenzy_image/: __init__.py  __main__.py  core.py
src/kenzy_image/resources/yolov7/: config.json
tests/: test_001_detector_init.py  test_002_detector_fileNotFound.py
