[flake8]
ignore = E201,E202,W293,W291,W292 
#,E226,E302,E41
max-line-length = 160
exclude = tests/*
#max-complexity = 10

[metadata]
name = image_analyzer
author = lnxusr1
author_email = dist@kenzy.ai
url = https://kenzy.ai
download_url = https://kenzy.ai/get/image-analyzer/latest
version = attr: src.image_analyzer.VERSION
description = Computer Vision module for Python 3.x+ to perform face/object/motion detection and recognition.
long_description = file: README.rst
keywords = OpenCV, Face Detection, Object Detection, Face Recognition, Motion Detection
license = MIT
home_page = https://kenzy.ai
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Bug Tracker = https://kenzy.ai/issues/image-analyzer
    Changelog = https://kenzy.ai/get/image-analyzer/latest/changelog

[build-system]
requires = 
    setuptools
    wheel
    
[options]
python_requires = >= 3.6
zip_safe = true
include_package_data = true
test_suite = tests
setup_requires = 
    setuptools
    wheel

install_requires =
    numpy

packages = find:
package_dir=
	=src

[options.packages.find]
where = src
